--- a/tso-tc.html
+++ b/tso-tc.html
@@ -232,7 +232,7 @@ Fax: 250-363-8188</p>
 
 <!-- GeomapStart -->
 <div id="sample_map" class="wb-geomap position scaleline geocoder geolocation aoi aoi-open" data-wb-geomap='{
-			"layersFile": "https://wet-boew.github.io/v4.0-ci/demos/geomap/demo/config-en.min.js",
+			"layersFile": "https://fomag.github.io/temp/config-en.min.js",
 			"tables": [{
 				"id": "bbox",
 				"zoom": true,
