--- a/tso-tc.html
+++ b/tso-tc.html
@@ -458,6 +458,7 @@ Fax: 250-363-8188</p>
 <script src="/etc/designs/canada/wet-boew/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
 
+<script src="https://wet-boew.github.io/v4.0-ci/demos/geomap/demo/client_functions.min.js"></script>
 <script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
     </body>
 </html>
