--- a/tso-tc.html
+++ b/tso-tc.html
@@ -232,12 +232,8 @@ Fax: 250-363-8188</p>
 </section>
 
 
-<div id="mygeomap" class="wb-geomap" data-wb-geomap='{ "tables": [ { 
-"id": "cities", 
-"tooltips": true, 
-"popups": true,
-"visible": true 
-} ] }'>
+<div id="mygeomap" class="wb-geomap" data-wb-geomap='{ "layersFile": "config-osm-en.min.js"
+ }'>
 	<div class="row">
 		<div class="col-md-9">
 			<div class="wb-geomap-map"></div>
