--- a/tso-tc.html
+++ b/tso-tc.html
@@ -232,7 +232,14 @@ Fax: 250-363-8188</p>
 </section>
 
 
-<div id="osm_map" class="wb-geomap" data-wb-geomap='{ "layersFile": "https://fomag.github.io/temp/config-osm-en.min.js"
+<div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
+	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
+	"tables": [ { 
+		"id": "cities", 
+		"tooltips": true, 
+		"popups": true,
+		"visible": true 
+	} ]					    
  }'>
 	<div class="row">
 		<div class="col-md-9">
