--- a/tso-tc.html
+++ b/tso-tc.html
@@ -242,13 +242,13 @@ Fax: 250-363-8188</p>
 	} ]					    
  }'>
 	<div class="row">
-		<div class="col-md-9">
+		<div class="col-md-11">
 			<div class="wb-geomap-map"></div>
 		</div>
-		<!-- Add optional map legend -->
+		<!-- Add optional map legend
 		<div class="wb-geomap-legend col-md-3">
 			<h2>Legend</h2>
-		</div>
+		</div>-->
 		<div class="row">
 			<!-- Add placeholder for overlays -->
 			<div class="wb-geomap-layers col-md-12">
