--- a/tso-tc.html
+++ b/tso-tc.html
@@ -238,6 +238,12 @@ Fax: 250-363-8188</p>
 		"id": "cities", 
 		"tooltips": true, 
 		"popups": true,
+		"popupsInfo": {
+			"id": "citiesPopup",
+			"height": 200,
+			"width": 450,
+			"close": true,
+			"content": "<h4>_City</h4><p>_Address</p>",
 		"visible": true 
 	} ]					    
  }'>
@@ -265,7 +271,7 @@ Fax: 250-363-8188</p>
 
 <details>
 <summary>TSO's</summary>	
-<table id="cities" aria-label="Cities" class="table">
+<table id="cities" aria-label="City" class="table">
 	<thead>
 		<tr>
 			<th>City</th>
