--- a/tso-tc.html
+++ b/tso-tc.html
@@ -243,7 +243,7 @@ Fax: 250-363-8188</p>
 			"height": 200,
 			"width": 450,
 			"close": true,
-			"content": "<h4>_City</h4><p>_Address</p>",
+			"content": "<h4>_City</h4><p>_Address</p>"},
 		"visible": true 
 	} ]					    
  }'>
