--- a/tso-tc.html
+++ b/tso-tc.html
@@ -271,7 +271,7 @@ Fax: 250-363-8188</p>
 
 <details>
 <summary>TSO's</summary>	
-<table id="cities" aria-label="City" class="table">
+<table id="cities" aria-label="Office location" class="table">
 	<thead>
 		<tr>
 			<th>City</th>
