--- a/tso-tc.html
+++ b/tso-tc.html
@@ -232,7 +232,7 @@ Fax: 250-363-8188</p>
 
 
 
-<div id="osm_map" class="wb-geomap geocoder" data-wb-geomap='{ 
+<div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
 	"tables": [ { 
 		"id": "cities", 
