--- a/tso-tc.html
+++ b/tso-tc.html
@@ -133,7 +133,7 @@
 <div class="wb-fieldflow" data-wb-fieldflow='{
 "renderas":"radio", 
 "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, 
-"noForm": true, 
+"noForm": false, 
 "noreqlabel": true
 }'>
 
