--- a/tso-tc.html
+++ b/tso-tc.html
@@ -170,7 +170,7 @@
 				</ul>
 			</div>	
 		</li>
-		<li data-wb-fieldflow='{"action": "removeClass", "source": "#dropbox", "class": "mfp-hide", "live":true}'>I want to find an office location (courier address or drop box site)</li>
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "#dropbox", "class": "mfp-hide"}'>I want to find an office location (courier address or drop box site)</li>
 	</ul>
 
 </div>
