--- a/tso-tc.html
+++ b/tso-tc.html
@@ -133,7 +133,7 @@
 <div class="wb-fieldflow" data-wb-fieldflow='{
 "renderas":"radio", 
 "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, 
-"noForm": false, 
+"noForm": true,					     
 "noreqlabel": true
 }'>
 
@@ -170,7 +170,7 @@
 				</ul>
 			</div>	
 		</li>
-		<li data-wb-fieldflow='{"action": "removeClass", "source": "#dropbox", "class": "mfp-hide"}'>I want to find an office location (courier address or drop box site)</li>
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "#dropbox", "class": "mfp-hide", "live": true}'>I want to find an office location (courier address or drop box site)</li>
 	</ul>
 
 </div>
