--- a/tso-tc.html
+++ b/tso-tc.html
@@ -233,6 +233,7 @@ Fax: 250-363-8188</p>
 
 <div id="osm_map" style="width: 100%, height: 400px !important" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
+	"aoi": [{ "toggle": false, , "extent": "-57, 46, -51, 50" }],
 	"tables": [ { 
 		"id": "cities", 
 		"tooltips": true, 
