--- a/tso-tc.html
+++ b/tso-tc.html
@@ -231,8 +231,9 @@ Fax: 250-363-8188</p>
 
 </section>
 
-<div id="osm_map" class="wb-geomap aoi" data-wb-geomap='{ 
+<div id="osm_map" class="wb-geomap aoi aoi-open" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
+	"aoi": [{ "toggle": false, , "extent": "-57, 46, -51, 50" }],
 	"tables": [ { 
 		"id": "cities", 
 		"tooltips": true, 
