--- a/tso-tc.html
+++ b/tso-tc.html
@@ -232,7 +232,7 @@ Fax: 250-363-8188</p>
 </section>
 
 <div id="osm_map" class="wb-geomap aoi aoi-open" data-wb-geomap='{ 
-	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
+	"layersFile": "https://fomag.github.io/temp/config-osm-en.js",
 	"aoi": [{ "toggle": false, , "extent": "-57, 46, -51, 50" }],
 	"tables": [ { 
 		"id": "cities", 
