--- a/tso-tc.html
+++ b/tso-tc.html
@@ -231,7 +231,7 @@ Fax: 250-363-8188</p>
 
 </section>
 
-<div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
+<div id="osm_map" style="height: 400px" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
 	"tables": [ { 
 		"id": "cities", 
