--- a/tso-tc.html
+++ b/tso-tc.html
@@ -231,7 +231,7 @@ Fax: 250-363-8188</p>
 
 </section>
 
-<div id="osm_map" style="height: 400px !important" class="wb-geomap" data-wb-geomap='{ 
+<div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
 	"tables": [ { 
 		"id": "cities", 
@@ -248,7 +248,7 @@ Fax: 250-363-8188</p>
  }'>
 	<div class="row">
 		<div class="col-md-11">
-			<div class="wb-geomap-map"></div>
+			<div class="wb-geomap-map" style="height: 500px !important"></div>
 		</div>
 		<!-- Add optional map legend
 		<div class="wb-geomap-legend col-md-3">
