--- a/tso-tc.html
+++ b/tso-tc.html
@@ -248,7 +248,7 @@ Fax: 250-363-8188</p>
  }'>
 	<div class="row">
 		<div class="col-md-11">
-			<div class="wb-geomap-map" style="height: 500px !important"></div>
+			<div style="height: 500px !important" class="wb-geomap-map"></div>
 		</div>
 		<!-- Add optional map legend
 		<div class="wb-geomap-legend col-md-3">
