--- a/tso-tc.html
+++ b/tso-tc.html
@@ -231,6 +231,12 @@ Fax: 250-363-8188</p>
 
 </section>
 
+<style>
+.wb-geomap-map {
+	height: 500px !important
+	}		
+</style>
+	
 <div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
 	"tables": [ { 
@@ -248,7 +254,7 @@ Fax: 250-363-8188</p>
  }'>
 	<div class="row">
 		<div class="col-md-11">
-			<div style="height: 500px !important" class="wb-geomap-map"></div>
+			<div class="wb-geomap-map"></div>
 		</div>
 		<!-- Add optional map legend
 		<div class="wb-geomap-legend col-md-3">
