--- a/tso-tc.html
+++ b/tso-tc.html
@@ -122,7 +122,7 @@
 </header>
 <main role="main" property="mainContentOfPage" class="container">
 
-<h1>Tax services offices and tax centres</h1>
+<h1>Find a CRA address</h1>
 
 <div class="col-md-6">
 
@@ -137,15 +137,15 @@
 "noreqlabel": true
 }'>
 
-<p><span class="h3">A question should be asked here...</span></p>
+<p><span class="h3">What type of address are you looking for?</span></p>
 	<ul>
-		<li>I want to find a mailing address
-			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noreqlabel": true}'>
+		<li>A mailing address
+			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".wb-geomap", "class": "mfp-hide"}, "noreqlabel": true}'>
 			<p><span class="h3">Which province or territory do you live in?</span></p>
 				<ul>
 					<li>Alberta
 						<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noreqlabel": true, "noForm": true}'>
-						<p><span class="h3">Select the city nearest you.</span></p>
+						<p><span class="h3">Select a city.</span></p>
 							<ul>
 								<li data-wb-fieldflow='[
 								{"action": "removeClass", "source": "#tso-bttn", "class": "mfp-hide", "live":true},
@@ -170,13 +170,13 @@
 				</ul>
 			</div>	
 		</li>
-		<li data-wb-fieldflow='{"action": "ajax", "url": "https://fomag.github.io/temp/tso+tc.html#osm_map", "live": true}'>I want to find an office location (courier address or drop box site)</li>
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "osm_map", "live": true}'>An office location (courier address or drop box site)</li>
 	</ul>
 
 </div>
 
 <section id="tso-bttn" class="results mfp-hide">
-<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Click here to go to selected TSO page" />
+<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Mailing address" />
 </section>
 
 </form>
@@ -237,6 +237,7 @@ Fax: 250-363-8188</p>
 	}		
 </style>
 
+
 <div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
 	"tables": [ { 
@@ -269,13 +270,15 @@ Fax: 250-363-8188</p>
 	</div>
 </div>
 
+
+
 <div class="clearfix"></div>
 <div class="clearfix"></div>
 
 <br>
 
 <details>
-<summary>TSO's</summary>	
+<summary>Office locations listed geographically from west to east</summary>	
 <table id="cities" aria-label="Office location" class="table">
 	<thead>
 		<tr>
@@ -288,6 +291,14 @@ Fax: 250-363-8188</p>
 			<td>Victoria</td>
 			<td>1415 Vancouver Street<br>Victoria BC V8V 3W4<br>Fax: 250-363-8188</td>
 		</tr>
+		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
+			<td>Vancouver</td>
+			<td>468 Terminal Ave<br>Vancouver BC  V6A 0C1<br>Fax: 604-689-7536</td>
+		</tr>	
+		<tr data-geometry="POINT (-122.846197 49.179788)" data-type="wkt">
+			<td>Surrey</td>
+			<td>9737 King George Boulevard<br>Surrey BC  V3T 5W6<br>Fax: 604-587-2010</td>
+		</tr>				
 		<tr data-geometry="POINT (-122.748619 53.918259)" data-type="wkt">
 			<td>Prince George</td>
 			<td>280 Victoria Street<br>Prince George BC  V2L 4X3<br>Fax: 250-561-7869</td>
@@ -296,14 +307,10 @@ Fax: 250-363-8188</p>
 			<td>Penticton</td>
 			<td>277 Winnipeg Street<br>Penticton BC  V2A 1N6<br>Fax: 250-492-8346</td>
 		</tr>
-		<tr data-geometry="POINT (-122.846197 49.179788)" data-type="wkt">
-			<td>Surrey</td>
-			<td>9737 King George Boulevard<br>Surrey BC  V3T 5W6<br>Fax: 604-587-2010</td>
-		</tr>
-		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
-			<td>Vancouver</td>
-			<td>468 Terminal Ave<br>Vancouver BC  V6A 0C1<br>Fax: 604-689-7536</td>
-		</tr>			
+		<tr data-geometry="POINT (-119.595205,49.8996077)" data-type="wkt">
+			<td>Kelowna</td>
+			<td>200 - 471 Queensway Avenue<br>Kelowna BC V1Y 6S5</td>
+		</tr>	
 	</tbody>
 </table>
 </details>
