--- a/tso-tc.html
+++ b/tso-tc.html
@@ -170,7 +170,7 @@
 				</ul>
 			</div>	
 		</li>
-		<li data-wb-fieldflow='{"action": "removeClass", "source": "osm_map", "live": true}'>An office location (courier address or drop box site)</li>
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "https://fomag.github.io/temp/map.html#osm_map", "live": true}'>An office location (courier address or drop box site)</li>
 	</ul>
 
 </div>
