--- a/map.html
+++ b/map.html
@@ -1,3 +1,36 @@
+<!DOCTYPE html><!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<html class="no-js" lang="en" dir="ltr">
+<!--<![endif]-->
+
+<head>
+
+<base href="https://www.canada.ca/">
+
+<title>Tax services offices and tax centres - Canada.ca</title>
+
+<meta name="robots" content="noindex, nofollow">
+
+<!--[if gte IE 9 | !IE ]><!-->
+<link href="/etc/designs/canada/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="/etc/designs/canada/clientlib-all.min.css" type="text/css">
+<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/wet-boew.min.css"/>
+<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/theme.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+<script src="//assets.adobedtm.com/caacec67651710193d2331efef325107c23a0145/satelliteLib-78cf42deb149c9766cbaaa6151e252b9b67c0200.js"></script>
+<!--<![endif]-->
+<!--[if lt IE 9]>
+		<link href="/etc/designs/canada/wet-boew/assets/favicon.ico" rel="shortcut icon" />
+		
+		<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/ie8-theme.min.css" />
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="/etc/designs/canada/wet-boew/js/ie8-wet-boew.min.js"></script>
+		<![endif]-->
+<!--[if lte IE 9]>
+		
+		
+		<![endif]-->
+</head>
+
 <section class="osm_map">
 
 <style>
@@ -82,3 +115,8 @@
 </details>
 	
 </section>
+	
+<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/jquery.min.js"></script>	
+<script src="https://wet-boew.github.io/v4.0-ci/demos/geomap/demo/client_functions.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>	
+</html>
