--- a/tso-tc.html
+++ b/tso-tc.html
@@ -378,6 +378,10 @@
     </footer>
 </div>
 
+<script>
+$( ".wb-geomap" ).trigger( "wb-init.wb-geomap" );	
+</script>	
+
 <script type="text/javascript">_satellite.pageBottom();</script>
     
 <script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script>
