--- a/tso-tc.html
+++ b/tso-tc.html
@@ -187,8 +187,8 @@
 
 <div class="clearfix"></div>
 
-<section id="dropbox" class="results mfp-hide">
-<!--hr>
+<!--section id="dropbox" class="results mfp-hide">
+<hr>
 
 <p>The CRA has offices with drop boxes in the following locations...............</p>
 
@@ -227,9 +227,9 @@ Fax: 250-363-8188</p>
 <p>1415 Vancouver Street<br>
 Victoria BC  V8V 3W4<br>
 Fax: 250-363-8188</p>
-</details-->	
+</details>	
 
-</section>
+</section-->
 
 <style>
 .wb-geomap-map {
@@ -238,6 +238,7 @@ Fax: 250-363-8188</p>
 </style>
 
 <section class="osm-map mfp-hide">
+
 <div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
 	"tables": [ { 
