--- a/tso-tc.html
+++ b/tso-tc.html
@@ -140,7 +140,7 @@
 <p><span class="h3">What type of address are you looking for?</span></p>
 	<ul>
 		<li>A mailing address
-			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".wb-geomap", "class": "mfp-hide"}, "noreqlabel": true}'>
+			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noreqlabel": true}'>
 			<p><span class="h3">Which province or territory do you live in?</span></p>
 				<ul>
 					<li>Alberta
