--- a/tso-tc.html
+++ b/tso-tc.html
@@ -170,7 +170,7 @@
 				</ul>
 			</div>	
 		</li>
-		<li data-wb-fieldflow='{"action": "removeClass", "source": "osm-map", "class": "mfp-hide", live": true}'>An office location (courier address or drop box site)</li>
+		<li onclick="$( ".wb-geomap" ).trigger( "wb-init.wb-geomap" );" data-wb-fieldflow='{"action": "removeClass", "source": "osm-map", "class": "mfp-hide", "live": true}'>An office location (courier address or drop box site)</li>
 	</ul>
 
 </div>
