--- a/tso-tc.html
+++ b/tso-tc.html
@@ -132,7 +132,7 @@
 
 <div class="wb-fieldflow" data-wb-fieldflow='{
 "renderas":"radio", 
-"reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, 
+"reset": { "action": "addClass", "source":".results,osm-map", "class": "mfp-hide"}, 
 "noForm": true,					     
 "noreqlabel": true
 }'>
@@ -237,7 +237,7 @@ Fax: 250-363-8188</p>
 	}		
 </style>
 
-<section id="osm-map" class="mfp-hide">
+<section id="osm-map" class="">
 
 <div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
