--- a/tso-tc.html
+++ b/tso-tc.html
@@ -238,6 +238,10 @@ Fax: 250-363-8188</p>
 </style>
 
 <section id="osm-map" class="mfp-hide">
+	
+<script>
+$( ".wb-geomap" ).trigger( "wb-init.wb-geomap" );	
+</script>	
 
 <div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
