--- a/tso-tc.html
+++ b/tso-tc.html
@@ -132,7 +132,7 @@
 
 <div class="wb-fieldflow" data-wb-fieldflow='{
 "renderas":"radio", 
-"reset": { "action": "addClass", "source":".results,osm-map", "class": "mfp-hide"}, 
+"reset": { "action": "addClass", "source":".results,#osm-map", "class": "mfp-hide"}, 
 "noForm": true,					     
 "noreqlabel": true
 }'>
@@ -140,7 +140,7 @@
 <p><span class="h3">What type of address are you looking for?</span></p>
 	<ul>
 		<li>A mailing address
-			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".results,osm-map", "class": "mfp-hide"}, "noreqlabel": true}'>
+			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".results,#osm-map", "class": "mfp-hide"}, "noreqlabel": true}'>
 			<p><span class="h3">Which province or territory do you live in?</span></p>
 				<ul>
 					<li>Alberta
@@ -465,7 +465,7 @@ $('.wb-geomap').trigger('wb-init.wb-geomap');
         </div>
     </footer>
 </div>
-
+    
 <script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script>
 <script type="text/javascript" src="/etc/clientlibs/granite/utils.min.js"></script>
 <script type="text/javascript" src="/etc/designs/canada/clientlib-publish.min.js"></script>
@@ -482,7 +482,5 @@ $('.wb-geomap').trigger('wb-init.wb-geomap');
 <script src="https://wet-boew.github.io/v4.0-ci/demos/geomap/demo/client_functions.min.js"></script>
 <script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
-	
-
-    </body>
+</body>
 </html>
