--- a/tso-tc.html
+++ b/tso-tc.html
@@ -481,9 +481,7 @@
 <script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
 <script>
-$('#test3').click(function(){
-trigger('wb-init.wb-geomap')
-});
+$('#test3').click(trigger('wb-init.wb-geomap'));
 </script>
 
 </body>
