--- a/tso-tc.html
+++ b/tso-tc.html
@@ -481,7 +481,7 @@
 <script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
 <script>
-$( document ).on( "wb-ready.wb-geomap", ".wb-geomap", function( event, map ) {
+$( "#osm_map" ).on( "wb-ready.wb-geomap", ".wb-geomap", function( event, map ) {
 });
 </script>
 
