--- a/tso-tc.html
+++ b/tso-tc.html
@@ -463,7 +463,13 @@
         </div>
     </footer>
 </div>
-    
+
+<script>
+
+$( "#test3" ).on( "click", trigger( "wb-init.wb-geomap" ));
+
+</script>
+
 <script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script>
 <script type="text/javascript" src="/etc/clientlibs/granite/utils.min.js"></script>
 <script type="text/javascript" src="/etc/designs/canada/clientlib-publish.min.js"></script>
