--- a/tso-tc.html
+++ b/tso-tc.html
@@ -195,7 +195,9 @@
 
 <section id="osm-map" class="mfp-hide">
 
+<p>Offices are located across Canada. Most are equipped with external drop boxes that can be used for your tax returns and other correspondence. There is no walk-in counter service offered at these locations.</p>
 
+<p>Drop boxes are typically emptied of their contents twice daily (more frequently during the tax filing season). Items are stamped by our mail operations the same day they are received. For the first clearance each morning, items are date stamped with the previous business day's date.</p>
 
 <div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
