--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -171,7 +171,7 @@
 				</ul>
 			</div>	
 		</li>
-		<li><a href="https://fomag.github.io/temp/offices.html">An office location (courier address or drop box site)</a></li>
+		<li data-wb-fieldflow='[{"action": "removeClass", "source": "#tso-bttn", "class": "mfp-hide", "live":true},{"action": "redir", "url": "https://fomag.github.io/temp/offices.html"}]'>An office location (courier address or drop box site)</a></li>
 	</ul>
 
 </div>
@@ -180,6 +180,10 @@
 <input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Mailing address" />
 </section>
 
+<section id="tso-bttn-2" class="results mfp-hide">
+<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Mailing address" />
+</section>	
+	
 </form>
 
 </div>
