--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -181,7 +181,7 @@
 </section>
 
 <section id="tso-bttn-2" class="results mfp-hide">
-<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Office location" />
+<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Office locations" />
 </section>	
 	
 </form>
