--- a/tso-tc.html
+++ b/tso-tc.html
@@ -262,11 +262,11 @@
 			<td>Prince George</td>
 			<td>280 Victoria Street<br>Prince George BC  V2L 4X3<br>Fax: 250-561-7869</td>
 		</tr>
-		<tr data-geometry="POINT (-119.595866 49.498695)" data-type="wkt">
+		<tr data-geometry="POINT (-119.494512 49.887087)" data-type="wkt">
 			<td>Penticton</td>
 			<td>277 Winnipeg Street<br>Penticton BC  V2A 1N6<br>Fax: 250-492-8346</td>
 		</tr>
-		<tr data-geometry="POINT (-119.595205 49.8996077)" data-type="wkt">
+		<tr data-geometry="POINT (-119.5647234 49.8871759)" data-type="wkt">
 			<td>Kelowna</td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC V1Y 6S5</td>
 		</tr>	
