--- a/tso-tc.html
+++ b/tso-tc.html
@@ -262,7 +262,7 @@
 			<td>Prince George</td>
 			<td>280 Victoria Street<br>Prince George BC  V2L 4X3<br>Fax: 250-561-7869</td>
 		</tr>
-		<tr data-geometry="POINT (-121.2885098 50.3734623)" data-type="wkt">
+		<tr data-geometry="POINT (-119.595866 49.498695)" data-type="wkt">
 			<td>Penticton</td>
 			<td>277 Winnipeg Street<br>Penticton BC  V2A 1N6<br>Fax: 250-492-8346</td>
 		</tr>
